grammar.js
    source_file: $ => seq(
      repeat($._prelude_item),
      optional(seq($._opening_statement, $._terminator, repeat($._top_level_item))),
    ),

    _prelude_item: $ => choice(
      seq(choice(seq($._import_marker, $.import_statement), $._prelude_statement), $._terminator),
      alias($._semicolon, $.empty_statement),
    ),

    _top_level_item: $ => choice(
      seq(choice($._prelude_statement, $._opening_statement), $._terminator),
      alias($._semicolon, $.empty_statement),
    ),

    _opening_statement: $ => choice($._opening_statement_without_block, $.block),

    _statement_item: $ => choice(
      seq($._statement, $._terminator),
      alias($._semicolon, $.empty_statement),
    ),

    _terminator: $ => choice(alias($._semicolon, ';'), $._automatic_semicolon),

    _body_statement: $ => choice(
      $.block,
      seq(choice($._prelude_statement, $._opening_statement_without_block, $.import_statement), $._terminator),
      alias($._semicolon, $.empty_statement),
    ),

    _unterminated_body: $ => choice($._statement, alias($._semicolon, $.empty_statement)),

    expression_statement: $ => $._statement_regular_expression,

    block: $ => seq('{', repeat($._statement_item), alias($._close_brace, '}')),

    local_declaration: $ => seq(
      choice('local', 'let'),
      choice(
        seq('function', optional($.function_attributes), field('name', $._name), $._function_tail),
        seq('class', field('name', $._name), $._class_tail),
        sep1($.variable_declarator, ','),
        seq(field('pattern', $._pattern), '=', field('value', $._expression)),
      ),
    ),

    _pattern: $ => choice($.table_pattern, $.array_pattern),

    if_statement: $ => prec.right(seq(
      'if',
      '(',
      field('condition', choice($._expression, $.if_declaration)),
      ')',
      field('consequence', $._body_statement),
      optional(seq(optional($._else_marker), 'else', field('alternative', $._body_statement))),
    )),

    while_statement: $ => seq('while', '(', field('condition', $._expression), ')', field('body', $._body_statement)),

    do_while_statement: $ => seq(
      'do',
      field('body', $._body_statement),
      'while',
      '(',
      field('condition', $._expression),
      ')',
    ),

    for_statement: $ => seq(
      'for',
      '(',
      optional(field('initializer', choice($.for_declaration, $._comma_expression))),
      alias($._semicolon, ';'),
      optional(field('condition', $._expression)),
      alias($._semicolon, ';'),
      optional(field('increment', $._comma_expression)),
      ')',
      field('body', $._body_statement),
    ),

    _comma_expression: $ => choice($._regular_expression, $.comma_expression),

    foreach_statement: $ => seq(
      'foreach',
      '(',
      optional(seq(field('index', $._name), ',')),
      field('value', choice($._name, $._pattern)),
      'in',
      field('iterable', $._expression),
      ')',
      field('body', $._body_statement),
    ),

    try_statement: $ => seq('try', field('body', $._unterminated_body), $._catch_clauses),

    _catch_clauses: $ => prec.right(choice(
      seq(alias($.typed_catch_clause, $.catch_clause), optional($._catch_clauses)),
      alias($.catch_all_clause, $.catch_clause),
    )),

    return_statement: $ => seq('return', optional($._expression)),

    yield_statement: $ => seq('yield', optional($._expression)),

    break_statement: _ => 'break',

    continue_statement: _ => 'continue',

    _name: $ => choice($.identifier, $._contextual_name, alias('constructor', $.identifier)),

    _slot_name: $ => choice($.identifier, $._contextual_name),

    _function_tail: $ => seq(
      field('parameters', $.parameters),
      optional(field('return_type', $.type_annotation)),
      field('body', $.block),
    ),

    parameters: $ => seq(
      '(',
      optional(choice($._required_parameters, $._default_parameters, $.variadic_parameter)),
      ')',
    ),

    _required_parameters: $ => seq(
      choice(alias($.required_parameter, $.parameter), alias($.pattern_parameter, $.parameter)),
      optional(seq(',', optional(choice($._required_parameters, $._default_parameters, $.variadic_parameter)))),
    ),

    _default_parameters: $ => seq(
      alias($.default_parameter, $.parameter),
      optional(seq(',', optional($._parameters_after_default))),
    ),

    _class_tail: $ => seq(optional(seq('(', field('base', $._expression), ')')), field('body', $.class_body)),

    arguments: $ => seq(choice('(', '?('), repeat(seq($._expression, optional(','))), ')'),

    parenthesized_expression: $ => seq('(', $._regular_expression, ')'),

    array: $ => seq('[', repeat(seq(choice($._expression, $.spread_element), optional(','))), ']'),

    table: $ => seq('{', repeat($._table_group), optional($._shorthand_run), alias($._close_brace, '}')),

    _table_group: $ => choice(
      seq($._table_member, optional(',')),
      seq($._shorthand_run, choice(',', seq($._shorthand_follower, optional(',')))),
    ),

    _shorthand_run: $ => repeat1($.shorthand_slot),

    slot: $ => seq(field('key', $._slot_name), '=', field('value', $._expression)),

    function_expression: $ => seq(
      optional('async'),
      'function',
      optional($.function_attributes),
      optional(field('name', $._name)),
      $._function_tail,
    ),

    lambda_expression: $ => choice(seq('async', $._lambda), $._lambda),

    _lambda: $ => prec.right(PREC.LAMBDA, seq(
      '@',
      optional($.function_attributes),
      optional(field('name', $._name)),
      field('parameters', $.parameters),
      optional(field('return_type', $.type_annotation)),
      field('body', $._regular_expression),
    )),

    string: $ => seq(
      '"',
      repeat(choice(alias(token.immediate(prec(1, /[^"\\\n]+/)), $.string_content), $.escape_sequence)),
      token.immediate('"'),
    ),

    escape_sequence: _ => token.immediate(ESCAPE),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,

    comment: _ => token(choice(
      seq('//', /[^\n]*/),
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
    )),
